@@ -1,3 +1,9 @@
+Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)
+
+        * client.c Call krb5_get_credentials() with new calling convention.
+
+        * server.c Call krb5_mk_req_extended() with new calling convention.
+
 Fri Feb  3 11:58:18 1995  Theodore Y. Ts'o  (tytso@dcl)
 
 	* client.c: (tgt_keyproc): Add keytype argument to rd_req_proc.
